--- a/강서연/index.html
+++ b/강서연/index.html
@@ -47,12 +47,58 @@
             <!-- //header -->
 
             <main id="contents">
-                <section class="view"></section>
+                <section class="view">
+                    <div class="btop bbom dotwrap flex">
+                        <span class="dot left"></span>
+                        <span class="dot right dotA"></span>
+                        <span class="dot leftBot"></span>
+                        <span class="dot rightBot dotA"></span>
+                    </div>
+                    <div class="music-veiw">
+                        <div class="img1">
+                            <img src="./assets/img/bg01.png" alt="" />
+                        </div>
+                        <p>
+                            프로토타입을 작성해본 적이 없었던 와중에 Figma라는 툴이 새롭게 나오게 되었고 이걸 프로젝트에
+                            적용하여 프로토타입을 작성해보면 좋을 것 같다고 말씀하셔서 적용하게 되었습니다. 사실상
+                            기술적인 면과 크게 관련되어 있진 않지만 프로토타입을 작성하면서 배웠던 점은 개발을 하기전에
+                            뭘 개발해야 할지 명확하게 파악할 수 있었다는 점 입니다. 본래, 개발을 할 때는 의식의 흐름으로
+                            개발을 하고는 했는데 프로토타입을 통해서 체계적인 구조를 세우는 방법과 실제로 시연해봄으로써
+                            발생할 수 있는 버그/예외 케이스 등에 대해 예측 할 수 있었습니다.
+                        </p>
+                        <p>
+                            프로토타입을 작성해본 적이 없었던 와중에 Figma라는 툴이 새롭게 나오게 되었고 이걸 프로젝트에
+                            적용하여 프로토타입을 작성해보면 좋을 것 같다고 말씀하셔서 적용하게 되었습니다. 사실상
+                            기술적인 면과 크게 관련되어 있진 않지만 프로토타입을 작성하면서 배웠던 점은 개발을 하기전에
+                            뭘 개발해야 할지 명확하게 파악할 수 있었다는 점 입니다. 본래, 개발을 할 때는 의식의 흐름으로
+                            개발을 하고는 했는데 프로토타입을 통해서 체계적인 구조를 세우는 방법과 실제로 시연해봄으로써
+                            발생할 수 있는 버그/예외 케이스 등에 대해 예측 할 수 있었습니다.
+                        </p>
+                        <p>
+                            프로토타입을 작성해본 적이 없었던 와중에 Figma라는 툴이 새롭게 나오게 되었고 이걸 프로젝트에
+                            적용하여 프로토타입을 작성해보면 좋을 것 같다고 말씀하셔서 적용하게 되었습니다. 사실상
+                            기술적인 면과 크게 관련되어 있진 않지만 프로토타입을 작성하면서 배웠던 점은 개발을 하기전에
+                            뭘 개발해야 할지 명확하게 파악할 수 있었다는 점 입니다. 본래, 개발을 할 때는 의식의 흐름으로
+                            개발을 하고는 했는데 프로토타입을 통해서 체계적인 구조를 세우는 방법과 실제로 시연해봄으로써
+                            발생할 수 있는 버그/예외 케이스 등에 대해 예측 할 수 있었습니다.
+                        </p>
+                    </div>
+                </section>
                 <nav class="nav"></nav>
             </main>
             <!-- //contents -->
 
-            <footer id="footer"></footer>
+            <footer id="footer">
+                <div class="box1">
+                    <h2 class="btop bbom dotwrap">
+                        <span class="dot left dotA"></span>
+                        <span class="dot right"></span>
+                        <span class="dot leftBot"></span>
+                        <span class="dot rightBot dotA"></span>
+                        story
+                    </h2>
+                </div>
+            </footer>
             <!-- //footter -->
         </div>
 
