--- a/김진우/index.html
+++ b/김진우/index.html
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <div class="layer layer1 aboutLayer">
+        <div class="layer layer1 aboutLayer none">
             <div class="layer__contents">
                 <div class="head">
                     <div class="face"></div>
@@ -153,7 +153,7 @@
             </div>
         </div>
 
-        <div class="layer layer2 youtube none">
+        <div class="layer layer2 youtube">
             <div class="layer__contents">
                 <h3>코딩 유튜버</h3>
                 <span class="small">Youtube API <em>API를 이용하여 코딩 관련된 최신 영상을 보여줍니다.</em></span>
@@ -314,7 +314,7 @@
             </div>
         </div>
 
-        <div class="portlayer">
+        <div class="portlayer none">
             <div class="port">
                 <div class="c1">
                     <span class="dot"></span>
