--- a/강서연/index.html
+++ b/강서연/index.html
@@ -34,12 +34,14 @@
                     </div>
                 </div>
                 <div class="box3 mt10">
-                    <div class="btop bbom dotwrap flex">
+                    <div class="btop bbom dotwrap flex leftNamePicture">
                         <span class="dot left"></span>
                         <span class="dot right dotA"></span>
                         <span class="dot leftBot"></span>
                         <span class="dot rightBot dotA"></span>
-                        <div class="left bright w40 h100"></div>
+                        <div class="left bright w40 h100">
+                            <div class="img"></div>
+                        </div>
                         <div class="right w60 h100"></div>
                     </div>
                 </div>
