--- a/박진아/index2.html
+++ b/박진아/index2.html
@@ -59,11 +59,144 @@
                         <div class="img3"></div>
                     </div>
                 </div>
+                <div class="about">
+                    <div class="title">Skill(2024)</div>
+                    <div class="skillWrap">
+                        <div class="skill">
+                            <div class="front">
+                                <span class="num">01</span>
+                                <h3>html</h3>
+                            </div>
+                            <div class="back">
+                                <p>This effect is a mouseover effect.</p>
+                            </div>
+                        </div>
+
+                        <div class="skill">
+                            <div class="front">
+                                <span class="num">02</span>
+                                <h3>html</h3>
+                            </div>
+                            <div class="back">
+                                <p>This effect is a mouseover effect.</p>
+                            </div>
+                        </div>
+
+                        <div class="skill">
+                            <div class="front">
+                                <span class="num">02</span>
+                                <h3>html</h3>
+                            </div>
+                            <div class="back">
+                                <p>This effect is a mouseover effect.</p>
+                            </div>
+                        </div>
+
+                        <div class="skill">
+                            <div class="front">
+                                <span class="num">02</span>
+                                <h3>html</h3>
+                            </div>
+                            <div class="back">
+                                <p>This effect is a mouseover effect.</p>
+                            </div>
+                        </div>
+
+                        <div class="skill">
+                            <div class="front">
+                                <span class="num">02</span>
+                                <h3>html</h3>
+                            </div>
+                            <div class="back">
+                                <p>This effect is a mouseover effect.</p>
+                            </div>
+                        </div>
+
+                        <div class="skill">
+                            <div class="front">
+                                <span class="num">02</span>
+                                <h3>html</h3>
+                            </div>
+                            <div class="back">
+                                <p>This effect is a mouseover effect.</p>
+                            </div>
+                        </div>
+
+                        <div class="skill">
+                            <div class="front">
+                                <span class="num">02</span>
+                                <h3>html</h3>
+                            </div>
+                            <div class="back">
+                                <p>This effect is a mouseover effect.</p>
+                            </div>
+                        </div>
+
+                        <div class="skill">
+                            <div class="front">
+                                <span class="num">02</span>
+                                <h3>html</h3>
+                            </div>
+                            <div class="back">
+                                <p>This effect is a mouseover effect.</p>
+                            </div>
+                        </div>
+
+                        <div class="skill">
+                            <div class="front">
+                                <span class="num">02</span>
+                                <h3>html</h3>
+                            </div>
+                            <div class="back">
+                                <p>This effect is a mouseover effect.</p>
+                            </div>
+                        </div>
+
+                        <div class="skill">
+                            <div class="front">
+                                <span class="num">02</span>
+                                <h3>html</h3>
+                            </div>
+                            <div class="back">
+                                <p>This effect is a mouseover effect.</p>
+                            </div>
+                        </div>
+
+                        <div class="skill">
+                            <div class="front">
+                                <span class="num">02</span>
+                                <h3>html</h3>
+                            </div>
+                            <div class="back">
+                                <p>This effect is a mouseover effect.</p>
+                            </div>
+                        </div>
+
+                        <div class="skill">
+                            <div class="front">
+                                <span class="num">02</span>
+                                <h3>html</h3>
+                            </div>
+                            <div class="back">
+                                <p>This effect is a mouseover effect.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- //section2 -->
 
-        <section id="section3"></section>
+        <section id="section3">
+            <h3>portfolio</h3>
+            <div class="projectWrap">
+                <div class="project p1"></div>
+                <div class="project p2">p2</div>
+                <div class="project p3">p3</div>
+                <div class="project p4">p4</div>
+                <div class="project p5">p5</div>
+            </div>
+        </section>
         <!-- //section3 -->
 
         <section id="section4"></section>
