--- a/안지은/index2.html
+++ b/안지은/index2.html
@@ -28,10 +28,8 @@
         <main id="main">
             <section id="section1">
                 <p class="desc split">
-                    어떤 일이라도 노력하고 즐기면 그 결과는 빛을 바란다고
-                    생각합니다.<br />신입의 열정과 도전정신을 깊숙히 새기며
-                    배움에 있어 <br />겸손함을 유지하며 세부적인 곳까지
-                    파고드는<br />
+                    어떤 일이라도 노력하고 즐기면 그 결과는 빛을 바란다고 생각합니다.<br />신입의 열정과 도전정신을
+                    깊숙히 새기며 배움에 있어 <br />겸손함을 유지하며 세부적인 곳까지 파고드는<br />
                     개발자가 되겠습니다.
                 </p>
                 <div class="text">
@@ -42,7 +40,38 @@
             </section>
             <!-- //section1 -->
 
-            <section id="section2"></section>
+            <section id="section2">
+                <div class="container">
+                    <div class="sec2__inner">
+                        <h2>Design</h2>
+                        <div class="article1">
+                            <div class="left">
+                                <img src="./assets/img/design-bg1@2x.jpg" alt="design" />
+                            </div>
+                            <div class="right">
+                                <h3>Webstandard</h3>
+                                <p>
+                                    웹에 관심이 많았던 저는 웹디자인을 코딩을 접하게 되었습니다.<br />
+                                    배워보지도 못한 영역이라 처음엔 개념이 안 잡혀있어서<br />
+                                    어려웠지만, 매일매일 메모장에 그날의 수업을 웹 수업 1일 차,<br />
+                                    2일 차 이렇게 적어가며 네이버 클라우드 입니다.
+                                </p>
+                                <a href="#">view</a>
+                            </div>
+                        </div>
+                        <div class="article2">
+                            <div class="left">article2 left</div>
+                            <div class="right">article2 right</div>
+                        </div>
+                        <div class="article3">
+                            <div class="left">article3 eft</div>
+                            <div class="right">article3 right</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- //section2 -->
+
             <section id="section3"></section>
             <section id="section4"></section>
             <section id="section5"></section>
@@ -82,9 +111,9 @@
         </script>
 
         <script>
-            gsap.set(".text .t1 .char", { y: 130 });
-            gsap.set(".text .t2 .char", { y: 130 });
-            gsap.set(".text .t3 .char", { y: 130 });
+            gsap.set(".text .t1 .char", { y: 160 });
+            gsap.set(".text .t2 .char", { y: 160 });
+            gsap.set(".text .t3 .char", { y: 160 });
             gsap.set(".desc .char", { y: 5, rotationx: 40, opacity: 0 });
             gsap.set("#header", { top: -100 });
 
