--- a/김진우/index.html
+++ b/김진우/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <header id="header">
-            <h1>Jin Woo</h1>
+            <h1>Jin Woo <span class="login">login</span></h1>
             <div class="time">2024.01.20(월) <em>Ansan</em></div>
         </header>
         <!-- //header -->
@@ -21,41 +21,41 @@
                 <source src="assets/videos/loseless-win11-hero-repeat.webm" type="video/webm" />
             </video>
             <div class="about">
-                <p>
+                <p class="split">
                     삶이란 누군가에게는 행복이며 누군가에게는 불행이고<br />
                     누군가에게는 축복이리라 나에게 주어진 이 삶은 어떨지 모르겠으나<br />
                     후회없이 살아가는 것 그것이 내 목표이자 부모에 대한 孝이다.
                     <span>- 진우</span>
                     <em class="close"></em>
                 </p>
-                <h1>space</h1>
+                <h1 class="split">space</h1>
             </div>
             <!-- <div class="wallpapers">
-            <div class="draggableIcon introIcon">
-                <img src="assets/img/intro.png" alt="intro">
-                <span>내 컴퓨터</span>
-            </div>
-            <div class="draggableIcon youtubeIcon">
-                <img src="assets/img/youtube.png" alt="youtube">
-                <span>나만의 유튜브</span>
-            </div>
-            <div class="draggableIcon movieIcon">
-                <img src="assets/img/netflix.png" alt="netflix">
-                <span>영화 리스트</span>
-            </div>
-            <div class="draggableIcon reactIcon">
-                <img src="assets/img/react.png" alt="reactIcon">
-                <span>리액트 블로그</span>
-            </div>
-            <div class="draggableIcon vueIcon">
-                <img src="assets/img/vue.png" alt="reactIcon">
-                <span>뷰 블로그</span>
-            </div>
-            <div class="draggableIcon viteIcon">
-                <img src="assets/img/vite.png" alt="reactIcon">
-                <span>뷰 블로그</span>
-            </div>
-        </div> -->
+                <div class="draggableIcon introIcon">
+                    <img src="assets/img/intro.png" alt="intro" />
+                    <span>내 컴퓨터</span>
+                </div>
+                <div class="draggableIcon youtubeIcon">
+                    <img src="assets/img/youtube.png" alt="youtube" />
+                    <span>나만의 유튜브</span>
+                </div>
+                <div class="draggableIcon movieIcon">
+                    <img src="assets/img/netflix.png" alt="netflix" />
+                    <span>영화 리스트</span>
+                </div>
+                <div class="draggableIcon reactIcon">
+                    <img src="assets/img/react.png" alt="reactIcon" />
+                    <span>리액트 블로그</span>
+                </div>
+                <div class="draggableIcon vueIcon">
+                    <img src="assets/img/vue.png" alt="reactIcon" />
+                    <span>뷰 블로그</span>
+                </div>
+                <div class="draggableIcon viteIcon">
+                    <img src="assets/img/vite.png" alt="reactIcon" />
+                    <span>뷰 블로그</span>
+                </div>
+            </div> -->
 
             <div class="footer__info">
                 <div class="menu">
@@ -306,10 +306,9 @@
                 </p>
             </div>
             <div class="layer__footer">
-                <div>😏 리액트를 이용하여 블로그를 작업하였습니다.</div>
                 <div>
-                    <span>view</span>
-                    <span>code</span>
+                    😏 리액트를 이용하여 블로그를 작업하였습니다. 보고 싶다면 <a href="#">사이트 보기</a> 코드를 보고
+                    싶다면 <a href="#">코드 보기</a>
                 </div>
             </div>
         </div>
@@ -343,8 +342,12 @@
                                 유튜브 API를 이용하여 원하는 음악을 고르는 사이트입니다. 더 자세히 보고 싶다면 아래
                                 버튼을 클릭해주세요!
                             </p>
-                            <a href="#">자세히 보기</a>
-                            <a href="#">실제 사이트 보기</a>
+                            <ul>
+                                <li>dd</li>
+                            </ul>
+                            <a href="#" class="detail">
+                                <img src="assets/img/detail.svg" alt="detail" />
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -357,18 +360,18 @@
         </div>
 
         <!-- <div id="loading">
-        <div class="loader">
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-        </div>
-        <div class="text">
-            로딩중....<em>55%</em><br>
-            <span>김진우 포트폴리오를 열고 있습니다.<br>조그만 기다려주세요!</span>
-        </div>
-    </div> -->
+            <div class="loader">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
+            <div class="text">
+                로딩중....<em>55%</em><br />
+                <span>김진우 포트폴리오를 열고 있습니다.<br />조그만 기다려주세요!</span>
+            </div>
+        </div> -->
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
@@ -379,15 +382,34 @@
                 document.querySelector(".layer1").classList.add("show");
             });
 
+            const targets = gsap.utils.toArray(".split");
+
+            targets.forEach((target) => {
+                let SplitClient = new SplitType(target, {
+                    type: "lines, words, chars",
+                });
+                let lines = SplitClient.lines;
+                let words = SplitClient.words;
+                let chars = SplitClient.chars;
+            });
+
+            // gsap.set(".about p .word", { opacity: 0 });
+            // gsap.set(".about h1 .char", { opacity: 0 });
+            // gsap.set("#header", { top: -100 });
+            // gsap.set(".footer__info", { bottom: -100 });
+            // gsap.set(".videoBG", { opacity: 0 });
+
             // setTimeout(() => {
             //     let tl = gsap.timeline();
             //     tl.to("#loading", { opacity: 0, duration: 1, delay: 0.5 });
-            //     tl.to(".footer__info", { height: 60, duration: 1, ease: "power4.out" })
-            //     tl.to(".footer__info .menu", { opacity: 1, duration: 0.4 });
-            //     tl.to(".wallpapers div", { x: 0, stagger: 0.06, duration: 1, ease: "power4.out" })
-            // }, 2000);
+            //     tl.to(".videoBG", { opacity: 1, duration: 1 });
+            //     tl.to(".about h1 .char", { opacity: 1, stagger: 0.05, duration: 1, ease: "power4.out" });
+            //     tl.to(".about p .word", { opacity: 1, stagger: 0.05, duration: 1, ease: "power3.out" });
+            //     tl.to("#header", { top: 0, duration: 1, ease: "power3.out" });
+            //     tl.to(".footer__info", { bottom: 10, duration: 1, ease: "power3.out" });
+            // }, 3000);
 
-            // gsap.set(".layer.aboutLayer", { autoAlpha: 0, y: 20, backdropFilter: 'blur(0px)', duration: 0.5 })
+            gsap.set(".layer.aboutLayer", { autoAlpha: 0, y: 20, backdropFilter: "blur(0px)", duration: 0.5 });
 
             const layerOpen = () => {
                 gsap.to(".layer.aboutLayer", {
