--- a/박정민/index2.html
+++ b/박정민/index2.html
@@ -314,6 +314,67 @@
                                     <span>공부중</span>
                                 </li>
                             </ul>
+                            <ul>
+                                <li>
+                                    <span>python</span>
+                                    <span>스크립팅 및 데이터 처리 능력</span>
+                                    <span>70%</span>
+                                </li>
+                                <li>
+                                    <span></span>
+                                    <span>데이터 분석 및 시각화 능력</span>
+                                    <span>75%</span>
+                                </li>
+                                <li>
+                                    <span></span>
+                                    <span>웹 프레임워크 활용 능력 (Django/Flask)</span>
+                                    <span>80%</span>
+                                </li>
+                            </ul>
+                            <ul>
+                                <li>
+                                    <span>php</span>
+                                    <span>백엔드 개발 및 서버 관리 능력</span>
+                                    <span>60%</span>
+                                </li>
+                                <li>
+                                    <span></span>
+                                    <span>MySQL 데이터베이스 연동 능력</span>
+                                    <span>75%</span>
+                                </li>
+                                <li>
+                                    <span></span>
+                                    <span>PHP 보안 및 인증 구현 능력</span>
+                                    <span>65%</span>
+                                </li>
+                            </ul>
+                            <ul>
+                                <li>
+                                    <span>node.js</span>
+                                    <span>서버 및 네티워크 애플리케이션 개발 능력</span>
+                                    <span>60%</span>
+                                </li>
+                                <li>
+                                    <span></span>
+                                    <span>Express.js 프레임워크 활용 능력</span>
+                                    <span>70%</span>
+                                </li>
+                                <li>
+                                    <span></span>
+                                    <span>비동기 프로그래밍 및 이벤트 처리 능력</span>
+                                    <span>80%</span>
+                                </li>
+                                <li>
+                                    <span></span>
+                                    <span>MySQL 데이터베이스 연동 능력</span>
+                                    <span>75%</span>
+                                </li>
+                                <li>
+                                    <span></span>
+                                    <span>비동기 프로그래밍 및 이벤트 처리 능력</span>
+                                    <span>75%</span>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -321,13 +382,48 @@
         </section>
         <!-- //section2 -->
 
-        <section id="section3"></section>
+        <section id="section3">
+            <h2 class="title">.portfolio</h2>
+            <div class="desc">
+                <p>
+                    지난 6개월 동안 웹 개발을 집중적으로 공부하며 다양한 프로젝트를 진행했습니다. 이 기간 동안, 저는
+                    최신 웹 기술과 개발 도구를 활용하여 실질적인 애플리케이션을 구축하고, 실습을 통해 이론적인 지식을
+                    실제로 적용해 볼 수 있었습니다. 각 프로젝트는 제가 배운 내용을 실제로 적용해 본 결과물이며, 저의
+                    기술적 성장을 보여줍니다.
+                </p>
+                <p>
+                    프로젝트를 통해 저는 HTML, CSS, JavaScript와 같은 기본적인 웹 기술부터 React, next.js, Vue.js 등의
+                    프레임워크를 활용한 프론트엔드 개발, 그리고 Node.js, Express, MongoDB를 사용한 백엔드 개발까지
+                    다양한 기술 스택을 익힐 수 있었습니다
+                </p>
+            </div>
+        </section>
         <!-- //section3 -->
 
         <section id="section4"></section>
         <!-- //section4 -->
 
-        <section id="section5"></section>
+        <section id="section5">
+            <div class="desc">
+                <p>
+                    지난 6개월 동안 웹 개발을 집중적으로 공부하며 다양한 프로젝트를 진행했습니다.<br />이 기간 동안,
+                    저는 최신 웹 기술과 개발 도구를 활용하여 실질적인 애플리케이션을 구축하고,<br />
+                    실습을 통해 이론적인 지식을 실제로 적용해 볼 수 있었습니다.
+                </p>
+            </div>
+            <div class="sec5-title">
+                <div class="left">
+                    <span class="t1">20</span>
+                    <span class="t2">forthe</span>
+                    <span class="t3">future</span>
+                </div>
+                <div class="right">
+                    <span class="r1">fotthe</span>
+                    <span class="r2">coding</span>
+                    <span class="r3">24</span>
+                </div>
+            </div>
+        </section>
         <!-- //section5 -->
 
         <section id="section6"></section>
